--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -69,6 +69,17 @@
   doi = {10.1111/jmcb.12592},
 }
 
+@Article{Buse:1982,
+  author = {A. Buse},
+  title = {The Likelihood Ratio, Wald, and Lagrange Multiplier Tests: An Expository Note},
+  Journal = {The American Statistician},
+  year = {1982},
+  volume = {36},
+  number = {3a},
+  pages = {153--157},
+  doi = {10.1080/00031305.1982.10482817},
+}
+
 @Article{Caggiano+Castelnuovo+Colombo+Nodari:2015,
   author = {G. Caggiano and E. Castelnuovo and V. Colombo and G. Nodari},
   title = {Estimating Fiscal Multipliers: News From A Non-linear World},
